--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Vercel API route for Gemini Chatbot",
   "main": "api/chat.js",
   "dependencies": {
-    "@google/genai": "^0.1.0" 
+    // UBAH BARIS INI: Hapus simbol caret (^)
+    "@google/genai": "0.1.0" 
   }
 }
