Update @google/genai dependency version to 0.3.0

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Vercel API route for Gemini Chatbot",
   "main": "api/chat.js",
+  "type": "commonjs",
   "dependencies": {
-    "@google/genai": "*"
+    "@google/genai": "0.3.0"
   }
 }
