--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "main": "api/chat.js",
   "type": "module",
   "dependencies": {
-    "@google/generative-ai": "0.21.0"
+    "@google/generative-ai": "latest"
   }
 }
